# grpcServer

./: README.md  test.cpp  test.out  test.py
src/interfases/: CMakeLists.txt  package.xml
src/interfases/gateway/: gateway  go.mod  go.sum
src/interfases/html/: _8_n_e_t_core_app_00_version_0av5_80_8_assembly_attributes_8cs.html  ____init_____8py.html  _c_make_lists_8txt.html  _get_value_8cs.html  _get_value_grpc_8cs.html  _program_8cs.html  annotated.html  class_client_1_1_program-members.html  class_client_1_1_program.html  class_get_coordinate_1_1_get_value_reflection-members.html  class_get_coordinate_1_1_get_value_reflection.html  class_get_coordinate_1_1coordinate-members.html  class_get_coordinate_1_1coordinate.html  class_get_coordinate_1_1coordinate__coll__graph.md5  class_get_coordinate_1_1coordinate__inherit__graph.map  class_get_coordinate_1_1coordinate__inherit__graph.md5  class_get_coordinate_1_1coordinate_service-members.html  class_get_coordinate_1_1coordinate_service.html  class_get_coordinate_1_1coordinate_service_1_1coordinate_service_base-members.html  class_get_coordinate_1_1coordinate_service_1_1coordinate_service_base.html  class_get_coordinate_1_1coordinate_service_1_1coordinate_service_client-members.html  class_get_coordinate_1_1coordinate_service_1_1coordinate_service_client.html  class_get_coordinate_1_1coordinate_service_1_1coordinate_service_client__coll__graph.md5  class_get_coordinate_1_1coordinate_service_1_1coordinate_service_client__inherit__graph.md5  classes.html  classget_value__pb2__grpc_1_1coordinate_service-members.html  classget_value__pb2__grpc_1_1coordinate_service.html  classget_value__pb2__grpc_1_1coordinate_service__coll__graph.map  classget_value__pb2__grpc_1_1coordinate_service__coll__graph.md5  classget_value__pb2__grpc_1_1coordinate_service__inherit__graph.md5  classget_value__pb2__grpc_1_1coordinate_service_servicer-members.html  classget_value__pb2__grpc_1_1coordinate_service_servicer.html  (+90 more)
(+324 files in other folders)
